// this file states how the interface look like

syntax = "proto3";                 // version
option java_multiple_files = true; // break into multiple files to see the source
package ds.tutorial.communication.grpc.generated; // the package for the generated files

message CheckBalanceRequest { string accountId = 1; }

message CheckBalanceResponse { double balance = 1; }

service BalanceService {
  rpc checkBalance(CheckBalanceRequest) returns (CheckBalanceResponse);
}
